--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -1,8 +1,9 @@
 .color-bg{
     width: auto;
-    height: 25rem;
-    background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(184,184,184,1) 15%, rgba(167,44,44,1) 75%);
+    height: 27.5rem;
+    background-image: url('../Images/background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
@@ -63,4 +64,15 @@ button:hover{
 a{
     text-decoration: none;
     color: #FFFFFF;
+}
+
+table{
+    
+    margin: auto;
+    width: 35%;
+    font-style: oblique;
+    text-align: center;
+    display: table;
+    border: 1px solid rgb(40, 40, 40);
+  
 }
