--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -37,10 +37,37 @@
 
 }
 
+.icon-resize{
+    background-color: yellow;
+    text-align: center;
+    width: auto;
+    border: 1px solid rgb(40, 40, 40);
+    height: 5rem;
+    border-radius: 20%;
+    opacity: 0.9;
+
+}
+
 .main-text{
     text-align: center;
     color: rgb(40, 40, 40);
     font-weight: bolder;
+    font-style: oblique;
+}
+
+.icons{
+    text-decoration: none;
+}
+.icons:hover{
+    background-color: gray;
+}
+
+.projects-card{
+    margin: auto;
+    width: 75%;
+    border: 1px solid rgb(40, 40, 40);
+    text-align: center;
+    color: rgb(40, 40, 40);
     font-style: oblique;
 }
 
